redis-app-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis-app-pod
  labels:
    name: redis-app-pod
    app: demo-voting-app
spec:
  containers:
    - name: redis-app-pod
      image: redis
      ports:
        - containerPort: 6379
