votingapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: votingapp-ingress
spec:
  backend:
    serviceName: votingappingress
    servicePort: 80
